Fix Purge gaps

--- a/src/public/less/pages/tools/purge.less
+++ b/src/public/less/pages/tools/purge.less
@@ -6,15 +6,16 @@
 	color: #17233b;
 	position: relative;
 
-	@media (min-width: @screen-sm-min) {
-		margin-bottom: 80px;
-	}
-
 	.content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		row-gap: 40px;
 		padding: 40px 24px 0;
 
 		@media (min-width: @screen-sm-min) {
 			padding: 64px 24px 68px;
+			row-gap: 0;
 		}
 
 		&_heading {
@@ -55,16 +56,13 @@
 			flex-wrap: wrap;
 			width: 100%;
 			max-width: 1014px;
-			min-height: 176px;
-			padding: 48px;
+			padding: 24px;
 			background: #fff;
 			box-shadow: 0 4px 4px rgba(23, 35, 59, .06), 0 0 1px 1px rgba(23, 35, 59, .11), 0 10px 22px -2px rgba(23, 35, 59, .08);
 			border-radius: 8px;
-			margin-top: 80px;
 
-			@media (max-width: @screen-xs-max) {
-				padding: 24px;
-				margin-top: 40px;
+			@media (min-width: @screen-sm-min) {
+				margin: 96px 0 0;
 			}
 
 			textarea {
